# godtier-debugger

./: .gitignore  ACTIVATE.ps1  ACTIVATE.sh  ACTIVATE_WATCH.ps1  CLEANUP_REPORT.md  COMMERCIAL_ROADMAP.md  Dockerfile  GOD_MODE_STATUS.md  GUMROAD_INSTRUCTIONS.txt  LICENSE  MAINTENANCE_QUICKSTART.md  MISSION_COMPLETE_V2.md  QUICKSTART.md  README.md  STATUS.md  auto_updater.py  check_updates.ps1  config.py  darwin_gene_memory.db  main.py  pyproject.toml  pytest.ini  requirements.txt  slow_script.py  test_safety.py
.github/workflows/: ci.yml
docs/: AUDIT_REPORT.html  AUTO_UPDATE_GUIDE.md  CODE_UPGRADE_INTEGRATION.md  MAINTENANCE_GUIDE.md  MISSION_COMPLETE.md  staging_checklist.md
docs/benchmarks/: ouroboros_phoenix_20260107_204547.html  ouroboros_phoenix_20260107_204547.json
examples/: dangerous_script.py  demo_debug_parser.py  manual_test_lazarus.py  quick_aurora_test.py  suicide_script.py  test_bugs.py
external_modules/Tier_10_Clean/: COPYRIGHT.md  LICENSE  QUICK_TEST.md  README.md  TIER10_GOVERNANCE_MODEL.md  TIER10_MANUAL_TECNICO.md  config.yaml  debug_recursion.py  evolution_history.json  main.py  requirements.txt  sujeto_de_prueba.py  test_empty_file.py  tier10_benchmark.py  tier10_engine.py
legacy/: god_tier_benchmark.py  neurosys_v6_integration.py  requirements_neurosys.txt
pro_bundle/: README_PRO.txt  pro_config.py
pro_bundle/aurora_setup/: install.py
pro_bundle/dashboard/: audit.py  serve_dashboard.py  serve_dashboard_live.py
scripts/: smoke.py
src/: __init__.py  cli.py
src/ai/: neurosymbolic_agi_core.py  (+3 more)
tests/: test_aurora_bridge.py  test_code_upgrade_system.py  test_darwin.py  test_god_tier_wrapper.py  test_integration.py  test_lazarus_unit.py  test_router_simulation.py  test_specialist.py  test_symbolic_parser.py  test_symbolic_parser_unit.py
(+59 files in other folders)
